feat: complete modernization to java 26, spring boot 4.1, security 7.1, and prometheus/grafana observability stack